--- a/content.html
+++ b/content.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <a href="./content.html">Move To Content</a>
-    <a href="./index.html">Move To Index</a>
+    <a href="./index.html">Back To Index</a>
 </body>
 
 </html>
