add GitHub link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <a href="./content.html">Move To Content</a>
     <a href="./index.html">Move To Index</a>
+    <a href="https://github.com">Move To GitHub</a>
 </body>
 
 </html>
